fix: update z-index of various components (#766)
- with recent changes on full screen in incident-manager we need to adjust library z-indexes to have space for full screen
- use "remark-gfm" to support table in markdown

--- a/framework/components/ADatePicker/ADatePicker.scss
+++ b/framework/components/ADatePicker/ADatePicker.scss
@@ -6,7 +6,7 @@ $date-picker-height: 100%;
 $date-picker-min-height: 260px;
 $date-picker-width: 275px;
 $date-picker-max-width: 275px;
-$date-picker-z-index: 1;
+$date-picker-z-index: 100;
 $date-picker-header-padding: 4px 0;
 $date-picker-nav-top: 2px;
 $date-picker-nav-width: 28px;
